app/globals.css
@import "tailwindcss";

@theme {
    --color-primary: #00A1B6;
    --color-black: #000000;
    --color-gray: #888;
    --color-error: #e7000b;
    --breakpoint-sm: 700px;
    --breakpoint-md: 1000px;
    --breakpoint-lg: 1350px;
    --breakpoint-xl: 1600px;
}

@layer base {
  body {
    @apply text-sm text-gray !bg-black;
  }

  h1 {
    @apply font-bold tracking-wider text-xl sm:text-3xl xl:text-5xl text-white;
  }

  h2 {
    @apply font-semibold text-lg xl:text-2xl text-primary;
  }

  h3 {
    @apply font-semibold sm:text-lg xl:text-xl text-primary;
  }

  input, textarea {
    @apply border-gray border rounded-md p-2 outline-primary [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none;
  }

  main {
    @apply pb-18;
  }
}

@layer components {
  .Toastify__toast-container {
    @apply max-[480px]:!w-[95%] max-[480px]:!m-2.5 ;
  }

  .Toastify__toast {
    @apply !bg-black ;
  }

  .Toastify__toast--error {
    @apply drop-shadow-[0px_0px_7px_var(--color-error)]
  }

    .Toastify__toast--success {
    @apply drop-shadow-[0px_0px_7px_var(--color-primary)]
  }
}

@utility empty-content {
  content: '';
}

@utility underline-animated {
  @apply relative after:absolute after:bottom-[-10px] after:left-0 after:w-0 after:h-[2.5px] after:bg-white after:empty-content after:transition-all after:rounded-sm after:pointer-events-none hover:after:w-full;
}

@utility underline-animated-active {
  @apply relative after:absolute after:bottom-[-10px] after:left-0 after:w-full after:h-[2.5px] after:bg-primary after:empty-content after:transition-all after:rounded-sm after:pointer-events-none;
}

@utility bg-overlay {
  @apply relative -z-20 after:empty-content after:absolute after:top-0 after:left-0 after:w-full after:h-full after:bg-black/30 after:-z-10 after:pointer-events-none;
}

@utility invalid-input {
  @apply border-error focus:outline-error;
}

